--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "dependencies": {
     "express": "^4.16.4",
     "discord.js": "^11.4.2",
-    "fetch-subreddit": "^3.0.0",
     "random-puppy": "^1.1.0",
-    "valid-url": "^1.0.9",
-    "is-url": "^1.2.4",
-    "clear": "^0.1.0"
+    "ytdl-core": "^0.29.0",
+    "node-opus": "^0.2.7",
+    "opusscript": "^0.0.6",
+    "ascii-table": "^0.0.9"
   },
   "engines": {
     "node": "8.x"
