--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "ytdl-core": "^0.29.0",
     "node-opus": "^0.2.7",
     "opusscript": "^0.0.6",
-    "ascii-table": "^0.0.9"
+    "isomorphic-fetch": "^2.2.1"
   },
   "engines": {
     "node": "8.x"
