🚅🐫 Updated with Glitch

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "description": "A simple Node app built on Express, instantly up and running.",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js" 
+    "start": "node bot.js"
   },
   "dependencies": {
     "express": "^4.16.4",
@@ -16,8 +16,8 @@
     "ytdl-core": "^0.29.0",
     "isomorphic-fetch": "^2.2.1",
     "node-opus": "^0.3.1",
-    "discord.js-commando": "^0.10.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "node-json-db": "^0.11.0"
   },
   "engines": {
     "node": "8.x"
