--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "isomorphic-fetch": "^2.2.1",
     "node-opus": "^0.3.1",
     "path": "^0.12.7",
-    "node-json-db": "^0.11.0"
+    "node-json-db": "^0.11.0",
+    "after-load": "^1.0.4"
   },
   "engines": {
     "node": "8.x"
