--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "node-opus": "^0.3.1",
     "path": "^0.12.7",
     "node-json-db": "^0.11.0",
-    "after-load": "^1.0.4"
+    "after-load": "^1.0.4",
+    "merge-img": "^2.1.3"
   },
   "engines": {
     "node": "8.x"
